maze.randommouse.RandomMouseMaze.scala.error
Erreur de compilation :
RandomMouseMaze:13: error: ';' expected but 'else' found.
    else{
    ^