maze.randommouse.RandomMouseMaze.scala.code
override def run() {
 
  while (estSurBiscuit==false){
    var random=random3()
  if(estFaceMur()){
    if(rand==0){
      droite()
    }
    else {
      gauche()
    }
    else{
      if(rand==0){gauche()}
      else if(rand==1){droite()}
      else{avance()}
    }
  }
}
}